--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Namaste React @learning</title>
   </head>
   <body>
     <div id="root">
-      <h1>Hello World</h1>
-      <h2>this is Subhankar karmakar</h2>
+      <h1>Not Rendered</h1>
     </div>
+
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
