Episode 10 : start of Tailwind - broken Css in this commit

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./index.css" type="text/css" rel="stylesheet" />
+
     <title>Namaste React @learning</title>
   </head>
   <body>
     <div id="root">
-      <h1>Not Rendered</h1>
+      <h1 class="text-3xl font-bold underline">
+        Hello world! <br>
+        Page is Not rendered
+      </h1>
     </div>
 
     <script type="module" src="./src/App.js"></script>
